--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -351,9 +351,9 @@ other = """
 
 InterDead is a psychologically oriented horror project by Zhovten Games in a B-horror aesthetic: a story about a messenger for the dead, around which a meta-universe is growing. This site is the entry point into it.
 
-Everything you see beyond this screen is written “in character” — from the perspective of the messenger’s creator, a socially awkward researcher who sincerely tries to follow “marketing rules” while selling his tool and reliably produces carefully calibrated cringe.
+Everything you see beyond this screen is written “in character” — from the perspective of the messenger’s creator, a socially awkward researcher who sincerely tries to follow “marketing rules” while selling his tool and reliably produces cringe.
 
-We describe in detail how the idea of the world and the game was born in the [first chapter of the cycle “Echo of an Unfading Memory”](/about/) — our extended “about” and meta-development diary.
+We describe in detail how the idea of the world and the game was born in the [first chapter of the cycle “Echo of an Unfading Memory”](/about/) — our extended “about”.
 
 You can read more about the structure of the universe, terminology, and techno-lore in the [InterDead Wiki on Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
 
