--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -351,9 +351,9 @@ other = """
 
 InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、Bホラーの美学で描かれる「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
 
-この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常に意図的なクリンジを生み出してしまいます。
+この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常にクリンジを生み出してしまいます。
 
-世界とゲームのアイデアがどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”であり、メタな開発日誌でもあります。
+世界とゲームのアイデアがどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”です。
 
 ユニバースの構造や用語、テクノロアの詳細については、[Fandom 上の InterDead Wiki](https://interdead.fandom.com/ja/wiki/InterDead_Wiki) をご覧ください。
 
