--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -351,9 +351,9 @@ other = """
 
 InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games в естетиці B-horror: історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
 
-Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує керований крінж.
+Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує крінж.
 
-Про те, як народилася ідея світу та гри, ми детально розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розгорнутий about і мета-щоденник розробки.
+Про те, як народилася ідея світу та гри, ми детально розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розгорнутий about.
 
 Докладніше про структуру всесвіту, терміни й техно-лор читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
 
