--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -350,9 +350,9 @@ other = """
 
 InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в эстетике B-horror: история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
 
-Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает контролируемый кринж.
+Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает кринж.
 
-О том, как родилась идея мира и игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about и мета-дневник разработки.
+О том, как родилась идея мира и игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about.
 
 Подробнее о структуре вселенной, терминах и техно-лоре читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/ru/wiki/%D0%92%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_InterDead).
 
