--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -349,7 +349,7 @@ other = "Privacy Policy"
 other = """
 ## Welcome
 
-InterDead is a psychologically oriented horror project by Zhovten Games in a B-horror aesthetic: a story about a messenger for the dead, around which a meta-universe is growing. This site is the entry point into it.
+InterDead is a psychologically oriented horror project by Zhovten Games within speculative fiction (SpecFi): a story about a messenger for the dead, around which a meta-universe is growing. This site is the entry point into it.
 
 Everything you see beyond this screen is written “in character” — from the perspective of the messenger’s creator, a socially awkward researcher who sincerely tries to follow “marketing rules” while selling his tool and reliably produces cringe.
 
