--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -348,7 +348,7 @@ other = "Политика конфиденциальности"
 other = """
 ## Добро пожаловать
 
-InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в эстетике B-horror: история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
+InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в рамках спекулятивной фантастики (SpecFi): история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
 
 Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает кринж.
 
