--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -349,7 +349,7 @@ other = "Політика конфіденційності"
 other = """
 ## Ласкаво просимо
 
-InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games в естетиці B-horror: історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
+InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games у межах спекулятивної фантастики (SpecFi): історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
 
 Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує крінж.
 
