--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -349,7 +349,7 @@ other = "プライバシーポリシー"
 other = """
 ## ようこそ
 
-InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、Bホラーの美学で描かれる「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
+InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、スペキュレイティブ・フィクション（SpecFi）の枠組みに基づく「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
 
 この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常にクリンジを生み出してしまいます。
 
