--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -351,19 +351,21 @@ other = """
 
 InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、スペキュレイティブ・フィクション（SpecFi）の枠組みに基づく「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
 
+このユニバースは、複数の作者と予定されているテーブルトークRPGセッションを通じても発展していきます。
+
 この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常にクリンジを生み出してしまいます。
 
-世界とゲームのアイデアがどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”です。
+世界と現在開発中のゲームの構想がどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”です。
 
 ユニバースの構造や用語、テクノロアの詳細については、[Fandom 上の InterDead Wiki](https://interdead.fandom.com/ja/wiki/InterDead_Wiki) をご覧ください。
 
-フィクションの外側に出る必要がある場合は、ページ下部にある法的文書および連絡先情報を参照してください。
+フィクションの外側に出る必要がある場合は、ページ下部にある法的文書および連絡先情報を参照してください。本プロジェクトは非営利であることにご注意ください。
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
 - [LinkedIn で連絡]({{ .LinkedInURL }})
 
-「入る」をクリックすると、あなたが 18歳以上 であり、条件に同意したことを確認します。
+「入る」をクリックすると、あなたは18歳以上（またはお住まいの法域における成人年齢以上）であることを確認し、利用規約に同意したものとみなされます。
 """
 
 ['agegate.sectionSecondary']
