--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -350,19 +350,21 @@ other = """
 
 InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в рамках спекулятивной фантастики (SpecFi): история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
 
+Вселенная также развивается через нескольких авторов и планируемые настольные ролевые сессии.
+
 Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает кринж.
 
-О том, как родилась идея мира и игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about.
+О том, как родилась идея мира и разрабатываемой нами игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about.
 
 Подробнее о структуре вселенной, терминах и техно-лоре читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/ru/wiki/%D0%92%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_InterDead).
 
-Если вам нужно выйти из вымысла, юридические документы и контакты находятся ниже.
+Если вам нужно выйти из вымысла, юридические документы и контакты находятся ниже. Обращаем внимание, что это некоммерческий проект.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
 - [Связаться через LinkedIn]({{ .LinkedInURL }})
 
-Нажимая «Войти», вы подтверждаете, что вам 18+ и принимаете условия.
+Нажимая «Войти», вы подтверждаете, что вам 18+ (или вы достигли возраста совершеннолетия в вашей юрисдикции), и принимаете условия.
 """
 
 ['agegate.sectionSecondary']
