--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -351,19 +351,21 @@ other = """
 
 InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games у межах спекулятивної фантастики (SpecFi): історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
 
+Всесвіт також розвивається завдяки кільком авторам і запланованим настільним рольовим сесіям.
+
 Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує крінж.
 
-Про те, як народилася ідея світу та гри, ми детально розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розгорнутий about.
+Про те, як виникла ідея світу та гри, над якою ми зараз працюємо, ми докладно розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розширений about.
 
 Докладніше про структуру всесвіту, терміни й техно-лор читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
 
-Якщо вам потрібно вийти з вимислу, юридичні документи та контакти розміщені нижче.
+Якщо вам потрібно вийти з вимислу, юридичні документи та контакти розміщені нижче. Звертаємо увагу, що це некомерційний проєкт.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
 - [Зв’язатися через LinkedIn]({{ .LinkedInURL }})
 
-Натискаючи «Увійти», ви підтверджуєте, що вам 18+ і ви приймаєте умови.
+Натискаючи «Увійти», ви підтверджуєте, що вам 18+ (або ви досягли віку повноліття у вашій юрисдикції), і приймаєте умови.
 """
 
 ['agegate.sectionSecondary']
