--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -43,6 +43,9 @@ other = "FAQ"
 ['menu.blog']
 other = "Mini-games"
 
+['menu.blog.link']
+other = "Blog"
+
 ['menu.modal.title']
 other = "Navigate"
 
