--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -384,6 +384,9 @@ other = "Читати далі"
 ["blog.categories"]
 other = "Категорії"
 
+[blog.categoryLabel]
+other = "Категорія"
+
 ["categories.miniGames"]
 other = "Міні-ігри"
 
@@ -392,6 +395,27 @@ other = "Мета-всесвіт"
 
 [profile.delete]
 other = "Delete profile"
+
+[profile.delete.infoTitle]
+other = "Обмеження видалення акаунта"
+
+[profile.delete.infoTrigger]
+other = "Обмеження видалення акаунта"
+
+[profile.delete.infoClose]
+other = "Закрити вікно обмежень видалення акаунта"
+
+[profile.delete.infoLine1]
+other = "Ви можете видалити свій акаунт не частіше ніж один раз на добу."
+
+[profile.delete.infoLine2]
+other = "Зверніть увагу: дані про пройдені вами ігри при цьому автоматично не видаляються."
+
+[profile.delete.infoLine3]
+other = "Зазначені обмеження запроваджено з метою запобігання зловживанню ресурсами сервісу."
+
+[profile.delete.infoLine4]
+other = "Для повного видалення персональних даних надішліть запит на адресу електронної пошти, вказавши свій логін у Discord."
 
 ['article.toc.title']
 other = "На цій сторінці"
