--- a/i18n/ja.toml
+++ b/i18n/ja.toml
@@ -83,7 +83,7 @@ other = "ダイアログを閉じる"
 other = "ここでは今も死者が応答します"
 
 ['hero.lead']
-other = "私たちはあの世からのささやきを届けるメッセンジャーを試作しています。降霊術ではなく、安全なチャットです。クローズドベータにいち早く参加するチャンスをお見逃しなく。"
+other = "私たちは、直接的な接触ではなく、インターフェースを通じて未知と対話するためのメッセンジャーを作っています。これはプロトタイプであり、だからこそあなたはその一部になることができます。あらゆるタイプの霊媒師にとっての不可欠な万能薬であり、もしかすると、死後の生が存在すると信じることで喪失の痛みを和らげる唯一の方法かもしれません。"
 
 ['hero.afterText']
 other = "ときには、問いを別の形で立てるだけで十分なことがある。"
@@ -314,17 +314,15 @@ other = "プライバシーポリシー"
 other = """
 ## ようこそ
 
-InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、スペキュレイティブ・フィクション（SpecFi）の枠組みに基づく「死者のためのメッセンジャー」をめぐる物語です。そのメッセンジャーを中心としてメタユニバースが広がっており、このサイトはその入口となります。
+InterDead（インターデッド）は、Zhovten Games スタジオによる心理志向ホラー・プロジェクトであり、スペキュレイティブ・フィクション（SpecFi）の枠組みに基づいた「死者のためのメッセンジャー」をめぐる物語です。このサイトは、その世界への入口となります。
 
-このユニバースは、複数の作者と予定されているテーブルトークRPGセッションを通じても発展していきます。
-
-この画面より先に表示されるテキストはすべて、「キャラクターとしての声」で書かれています――メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売り込む際に「マーケティングの鉄則」を守ろうと必死に試みますが、その結果として常にクリンジを生み出してしまいます。
-
-世界と現在開発中のゲームの構想がどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく語っています。これは本プロジェクトにおける拡張版の“About”です。
+世界観と現在開発中のゲームの構想がどのように生まれたのかについては、連作「消えない記憶のエコー」の[第1章](/about/)で詳しく説明しています。これは本プロジェクトの拡張版「About」です。
 
 ユニバースの構造や用語、テクノロアの詳細については、[Fandom 上の InterDead Wiki](https://interdead.fandom.com/ja/wiki/InterDead_Wiki) をご覧ください。
 
-フィクションの外側に出る必要がある場合は、ページ下部にある法的文書および連絡先情報を参照してください。本プロジェクトは非営利であることにご注意ください。
+この画面より先に表示される内容はすべて「キャラクターとしての語り」で書かれています。メッセンジャーの創作者である、社会的に不器用な研究者の視点からです。彼は自分のツールを売るために「マーケティングのルール」を真剣に守ろうとしますが、その結果として確実にクリンジを生み出します。
+
+フィクションの外に出る必要がある場合は、以下に法的文書および連絡先情報を掲載しています。
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
