--- a/i18n/uk.toml
+++ b/i18n/uk.toml
@@ -83,7 +83,7 @@ other = "Закрити вікно"
 other = "Тут досі відповідають мертві"
 
 ['hero.lead']
-other = "Ми створюємо прототип месенджера, що передає шепіт із того боку. Жодних сеансів — лише захищений чат. Не проґавте шанс одними з перших долучитися до закритого бета-тесту!"
+other = "Ми створюємо месенджер для взаємодії з невідомим через інтерфейс, а не через прямий контакт. Це прототип — і саме тому ви можете стати його частиною. Незамінна панацея для медіумів усіх типів і, можливо, єдиний спосіб втамувати біль утрати, повіривши, що життя після смерті все-таки існує."
 
 ['hero.afterText']
 other = "Іноді достатньо інакше поставити запитання."
@@ -316,15 +316,13 @@ other = """
 
 InterDead — психологічно орієнтований горор-проєкт студії Zhovten Games у межах спекулятивної фантастики (SpecFi): історія про месенджер для мертвих, довкола якого розростається мета-всесвіт. Цей сайт — вхідна точка до нього.
 
-Всесвіт також розвивається завдяки кільком авторам і запланованим настільним рольовим сесіям.
+Про те, як виникла ідея світу та гри, над якою ми зараз працюємо, ми докладно розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розширений «About».
 
-Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і незмінно породжує крінж.
+Докладніше про структуру всесвіту, термінологію та техно-лор читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
 
-Про те, як виникла ідея світу та гри, над якою ми зараз працюємо, ми докладно розповідаємо в [першому розділі циклу «Ехо незгасної пам’яті»](/about/) — це наш розширений about.
+Усе, що ви побачите після цього екрана, написано «в образі» — від імені творця месенджера, соціально незграбного дослідника, який щиро намагається дотримуватися «правил маркетингу», продаючи свій інструмент, і стабільно породжує крінж.
 
-Докладніше про структуру всесвіту, терміни й техно-лор читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/wiki/InterDead_Wiki).
-
-Якщо вам потрібно вийти з вимислу, юридичні документи та контакти розміщені нижче. Звертаємо увагу, що це некомерційний проєкт.
+Якщо вам потрібно вийти за межі вигадки, юридичні документи та контактна інформація доступні нижче.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
