--- a/i18n/ru.toml
+++ b/i18n/ru.toml
@@ -83,7 +83,7 @@ other = "Закрыть окно"
 other = "Мёртвые отвечают здесь до сих пор"
 
 ['hero.lead']
-other = "Мы создаём прототип мессенджера, который передаёт шёпот с той стороны. Никаких сеансов — только защищённый чат. Не упустите шанс одним из первых принять участие в закрытом бета-тестировании!"
+other = "Мы создаём мессенджер для взаимодействия с неизвестным через интерфейс, а не через прямой контакт. Это прототип — и именно поэтому вы можете стать его частью. Незаменимая панацея для медиумов всех типов и, возможно, единственный способ утолить горе утраты, поверив, что жизнь после смерти всё-таки есть."
 
 ['hero.afterText']
 other = "Иногда достаточно другого способа задать вопрос."
@@ -315,15 +315,13 @@ other = """
 
 InterDead — психологически ориентированный хоррор-проект студии Zhovten Games в рамках спекулятивной фантастики (SpecFi): история о мессенджере для мёртвых, вокруг которого разрастается мета-вселенная. Этот сайт — входная точка в неё.
 
-Вселенная также развивается через нескольких авторов и планируемые настольные ролевые сессии.
+О том, как родилась идея мира и разрабатываемой нами игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый «About».
 
-Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается соблюдать «правила маркетинга», продавая свой инструмент, и неизменно порождает кринж.
+Подробнее о структуре вселенной, терминологии и техно-лоре читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/ru/wiki/%D0%92%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_InterDead).
 
-О том, как родилась идея мира и разрабатываемой нами игры, мы подробно рассказываем в [первой главе цикла «Эхо неугасаемой памяти»](/about/) — это наш развёрнутый about.
+Всё, что вы увидите после этого экрана, написано «в образе» — от лица создателя мессенджера, социально неловкого исследователя, который искренне пытается следовать «правилам маркетинга», продавая свой инструмент, и надёжно производит кринж.
 
-Подробнее о структуре вселенной, терминах и техно-лоре читайте в [InterDead Wiki на Fandom](https://interdead.fandom.com/ru/wiki/%D0%92%D1%81%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_InterDead).
-
-Если вам нужно выйти из вымысла, юридические документы и контакты находятся ниже. Обращаем внимание, что это некоммерческий проект.
+Если вам нужно выйти за пределы вымысла, юридические документы и контактная информация доступны ниже.
 
 - [{{ .TermsTitle }}]({{ .TermsURL }})
 - [{{ .PrivacyTitle }}]({{ .PrivacyURL }})
